--- a/src/static/index.html
+++ b/src/static/index.html
@@ -1,108 +1,67 @@
 <html>
 <head>
-<title>TCP Console</title>
-<style>
-body {
-    font-size: 10pt;
-    color: #666;
-    font-family: 'PT Mono', mono;
-/*     background-color: rgba(0,2,2,1.0); */
-/*     background-image: url(middle.gif); */
-}
-
-.head {
-    z-index: -1;
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    height: 256px;
-    background-image: url(top.gif);
-}
-
-.foot {
-    z-index: -1;
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    height: 256px;
-    background-image: url(bottom.gif);
-}
-
-p {
-    text-align: center;
-    font-style: italic;
-    font-size: 11pt;
-    text-shadow: 1px 1px 1px #000;
-}
-
-a {
-    color: #888;
-    text-decoration: none;
-    transition: color 0.2s;
-}
-
-a:hover {
-    color: #fff;
-    transition: color 0.5s;
-}
-
-hr {
-    border: 0;
-    text-align: center;
-    color: #666;
-    font-size: 12pt;
-    margin-top: 40px;
-}
-
-hr:after {
-    content: '§';
-}
-
-h1 {
-    text-align: center;
-    font-size: 16pt;
-    color: #aaa;
-    margin-top: 30px;
-    margin-bottom: 20px;
-    text-shadow: 1px 1px 2px #000;
-}
-
-</style>
+    <title>TCP Console</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 </head>
 
 <body>
-     <input type="text" id="input" />
-     <ul id="messages"></ul>
+    <div class='container'>
+        <div class='row'>
+            <div class='col-sm-8'>
+                <input type="text" id="host" placeholder='Host' style='width: 100%;'/>
+            </div>
+            <div class='col-sm-4'>
+                <input type="text" id="port" placeholder='Port' style='width: 100%;' />
+            </div>
+        </div>
+        <div class='row'>
+            <div class='col-sm-12'>
+                <input type="text" id="input" style='width: 100%;'/>
+            </div>
+        </div>
+        <div class='row'>
+            <div class='col-sm-12'>
+                <div class="alert alert-primary" role="alert">
+                    This is a primary alert—check it out!
+                </div>
+                <div class="alert alert-secondary" role="alert">
+                    This is a secondary alert—check it out!
+                </div>
+            </div>
+        </div>
+    </div>
+    <ul id="messages"></ul>
 
-    <script src="//code.jquery.com/jquery-2.1.3.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     <script type="text/javascript">
-      var append_li = function (str) {
-        $('#messages').append($('<li>').html(str));
-      }
-      var ws_uri = 'ws://localhost:8020/ws';
-      console.log(ws_uri);
-      var ws = new WebSocket(ws_uri);
-      ws.onopen = function () {
-        append_li('ws.onopen');
-        ws.send(JSON.stringify({action: 'open', host: 'ferienamwasser.reisen', port: 443}))
-        setInterval(function() {
-            ws.send(JSON.stringify({action: 'poll'}))
-        }, 1000);
-      }
-      ws.onmessage = function (msg) {
-        append_li('<pre>' + msg.data + '</pre>');
-      }
-      ws.onclose = function () {
-        append_li('ws.onclose');
-      }
-      var input = $('#input')
-      input.change(function () {
-        var msg = input.val();
-        ws.send(JSON.stringify({action: 'send', message: msg}))
-        append_li('"' + msg + '" to server');
-        input.val("");
-      });
-    </script></body>
+        var append_li = function (str) {
+            $('#messages').append($('<li>').html(str));
+        }
+        var ws_uri = 'ws://localhost:8020/ws';
+        console.log(ws_uri);
+        var ws = new WebSocket(ws_uri);
+        ws.onopen = function () {
+            append_li('ws.onopen');
+            ws.send(JSON.stringify({action: 'open', host: 'ferienamwasser.reisen', port: 443}))
+            setInterval(function() {
+                ws.send(JSON.stringify({action: 'poll'}))
+            }, 1000);
+        }
+        ws.onmessage = function (msg) {
+            append_li('<pre>' + msg.data + '</pre>');
+        }
+        ws.onclose = function () {
+            append_li('ws.onclose');
+        }
+        var input = $('#input')
+        input.change(function () {
+            var msg = input.val();
+            ws.send(JSON.stringify({action: 'send', message: msg}))
+            append_li('"' + msg + '" to server');
+            input.val("");
+        });
+    </script>
+</body>
 </html>
