--- a/src/static/index.html
+++ b/src/static/index.html
@@ -1,23 +1,35 @@
 <html>
 <head>
 <title>TCP Console</title>
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 <style type='text/css'>
-#messages { 
+#messages, #input, input, button { 
     font-family: mono;
     white-space: pre;
+    font-size: 10pt;
+    background-color: #f0f0f0;
+    border: 1px solid #ddd;
+    border-radius: 4px;
+    padding: 8px;
+    margin: 8px 0;
+}
+#input { 
+    background-color: #c3def1;
+    border: 1px solid #729fcf;
 }
 </style>
 </head>
 
 <body>
-    <div class='container'>
+    <div class='container-fluid'>
         <div class='row'>
             <div class='col-sm-8'>
                 <input type="text" id="host" placeholder='Host' style='width: 100%;'/>
             </div>
-            <div class='col-sm-4'>
+            <div class='col-sm-2'>
                 <input type="text" id="port" placeholder='Port' style='width: 100%;' />
+            </div>
+            <div class='col-sm-1'>
+                <button class='btn btn-sm btn-primary'>Connect</button>
             </div>
         </div>
         <div class='row'>
@@ -27,20 +39,12 @@
         </div>
         <div class='row'>
             <div class='col-sm-12'>
-                <div class="alert alert-primary" role="alert">
-                    This is a primary alert—check it out!
-                </div>
-                <div class="alert alert-secondary" role="alert">
-                    This is a secondary alert—check it out!
-                </div>
+                <div id="messages"></div>
             </div>
         </div>
     </div>
-    <div id="messages"></div>
 
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     <script type="text/javascript">
         var append_li = function (str) {
             $('#messages').text($('#messages').text() + str);
@@ -50,9 +54,9 @@
         var ws = new WebSocket(ws_uri);
         ws.onopen = function () {
 //             append_li('ws.onopen');
-            ws.send(JSON.stringify({action: 'open', host: 'ferienamwasser.reisen', port: 443, tls: true}))
+            ws.send(JSON.stringify({action: 'open', host: 'nhcham.org', port: 80, tls: false}))
             ws.send(JSON.stringify({action: 'send', message: 'GET / HTTP/1.0'}))
-            ws.send(JSON.stringify({action: 'send', message: 'Host: ferienamwasser.reisen'}))
+            ws.send(JSON.stringify({action: 'send', message: 'Host: nhcham.org'}))
             ws.send(JSON.stringify({action: 'send', message: ''}))
         }
         ws.onmessage = function (msg) {
