--- a/src/static/index.html
+++ b/src/static/index.html
@@ -30,9 +30,15 @@
         </div>
     </div>
     <div class='foot'>
-        <input id='input' type='text' style='width: calc(100% - 210px);' disabled />
+        <input id='input' type='text' style='width: calc(100% - 177px);' disabled />
         <button id='send' style='width: 80px;' disabled>Send</button>
         <button id='clear' style='width: 80px;'>Clear</button>
+        <div class='status'>
+        <a href='/readme.html'>What's this?</a> | 
+        <a href='/examples.html'>Examples</a> | 
+        <a href='https://github.com/specht/tcpconsole'>Source Code</a>
+        
+        </div>
     </div>
 </body>
 </html>
