--- a/src/static/index.html
+++ b/src/static/index.html
@@ -34,6 +34,9 @@
         <button id='send' style='width: 80px;' disabled>Send</button>
         <button id='clear' style='width: 80px;'>Clear</button>
         <div class='status'>
+        <div style='float: right;'>
+            Rate limit: <span id='rate_limit'></span> bytes/s
+        </div>
         <a href='/readme.html'>What's this?</a> | 
         <a href='/examples.html'>Examples</a> | 
         <a href='https://github.com/specht/tcpconsole'>Source Code</a>
