--- a/src/static/index.html
+++ b/src/static/index.html
@@ -23,7 +23,7 @@
                 <input type="checkbox" id='tls'>
                 <span class="slider round"></span>
             </label>
-            TLS
+            SSL
             <span class='rule'></span>
             <button id='connect'>Connect</button>
             <span class='rule'></span>
